fixed some misalignments css

--- a/src/pages/Login/styles.module.css
+++ b/src/pages/Login/styles.module.css
@@ -21,6 +21,7 @@
 background-color: var(--input-field-color);
 padding: 16px;
 margin-bottom: 10px;
+color: var(--font-color);
 
 }
 .input_container {
