--- a/src/pages/Signup/styles.module.css
+++ b/src/pages/Signup/styles.module.css
@@ -17,9 +17,10 @@
     border: none;
     outline: none;
     border-radius: 5px;
-background-color: #e5e7eb;
+background-color: var(--input-field-color);
 padding: 16px;
 margin-bottom: 10px;
+color: var(--font-color);
 
 }
 .input_container {
@@ -53,6 +54,7 @@ align-content: space-between;
 .signup_content{
     font-weight: bold;
     font-style: inherit;
+    color: var(  --font-color);
 }
 
 .error_content{
